--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Sanjeetsahu29/Pure-React/issues"
   },
-  "homepage": "https://github.com/Sanjeetsahu29/Pure-React#readme"
+  "homepage": "https://github.com/Sanjeetsahu29/Pure-React#readme",
+  "dependencies": {
+    "parcel": "^2.13.3"
+  }
 }
